src/rosbagdatabricks/rosbagdatabricks/RosMessageParser.py
# Generated from RosMessageParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class RosMessageParser ( Parser ):

    grammarFileName = "RosMessageParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'bool'", u"'int8'", u"'uint8'", u"'byte'", 
                     u"'char'", u"'int16'", u"'uint16'", u"'int32'", u"'uint32'", 
                     u"'int64'", u"'uint64'", u"'float32'", u"'float64'", 
                     u"'string'", u"'time'", u"'duration'", u"'/'", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'+'", u"'-'", u"<INVALID>", 
                     u"'---'", u"<INVALID>", u"<INVALID>", u"'True'", u"'False'" ]

    symbolicNames = [ u"<INVALID>", u"BOOL", u"INT8", u"UINT8", u"BYTE", 
                      u"CHAR", u"INT16", u"UINT16", u"INT32", u"UINT32", 
                      u"INT64", u"UINT64", u"FLOAT32", u"FLOAT64", u"STRING", 
                      u"TIME", u"DURATION", u"SLASH", u"OPEN_BRACKET", u"CLOSE_BRACKET", 
                      u"ASSIGNMENT", u"PLUS", u"MINUS", u"HASH", u"MESSAGE_SEPARATOR", 
                      u"INTEGER_LITERAL", u"REAL_LITERAL", u"TRUE", u"FALSE", 
                      u"IDENTIFIER", u"ROSBAG_MESSAGE_SEPARATOR", u"WHITESPACES", 
                      u"NEWLINES", u"NEWLINE", u"STRING_IDENTIFIER", u"STRING_OPEN_BRACKET", 
                      u"STRING_CLOSE_BRACKET", u"STRING_INTEGER_LITERAL", 
                      u"STRING_ASSIGNMENT", u"STRING_HASH", u"STRING_WHITESPACES", 
                      u"STRING_NEWLINE", u"STRING_VALUE", u"STRIN_ASSIGNMENT_NEWLINE", 
                      u"COMMENT", u"COMMENT_NEWLINE" ]

    RULE_ros_file_input = 0
    RULE_ros_message_input = 1
    RULE_ros_action_input = 2
    RULE_ros_service_input = 3
    RULE_rosbag_input = 4
    RULE_rosbag_nested_message = 5
    RULE_ros_message = 6
    RULE_field_declaration = 7
    RULE_constant_declaration = 8
    RULE_comment = 9
    RULE_identifier = 10
    RULE_dtype = 11
    RULE_ros_type = 12
    RULE_array_type = 13
    RULE_variable_array_type = 14
    RULE_fixed_array_type = 15
    RULE_integral_type = 16
    RULE_floating_point_type = 17
    RULE_temportal_type = 18
    RULE_string_type = 19
    RULE_boolean_type = 20
    RULE_sign = 21
    RULE_integral_value = 22
    RULE_floating_point_value = 23
    RULE_bool_value = 24
    RULE_string_value = 25

    ruleNames =  [ u"ros_file_input", u"ros_message_input", u"ros_action_input", 
                   u"ros_service_input", u"rosbag_input", u"rosbag_nested_message", 
                   u"ros_message", u"field_declaration", u"constant_declaration", 
                   u"comment", u"identifier", u"dtype", u"ros_type", u"array_type", 
                   u"variable_array_type", u"fixed_array_type", u"integral_type", 
                   u"floating_point_type", u"temportal_type", u"string_type", 
                   u"boolean_type", u"sign", u"integral_value", u"floating_point_value", 
                   u"bool_value", u"string_value" ]

    EOF = Token.EOF
    BOOL=1
    INT8=2
    UINT8=3
    BYTE=4
    CHAR=5
    INT16=6
    UINT16=7
    INT32=8
    UINT32=9
    INT64=10
    UINT64=11
    FLOAT32=12
    FLOAT64=13
    STRING=14
    TIME=15
    DURATION=16
    SLASH=17
    OPEN_BRACKET=18
    CLOSE_BRACKET=19
    ASSIGNMENT=20
    PLUS=21
    MINUS=22
    HASH=23
    MESSAGE_SEPARATOR=24
    INTEGER_LITERAL=25
    REAL_LITERAL=26
    TRUE=27
    FALSE=28
    IDENTIFIER=29
    ROSBAG_MESSAGE_SEPARATOR=30
    WHITESPACES=31
    NEWLINES=32
    NEWLINE=33
    STRING_IDENTIFIER=34
    STRING_OPEN_BRACKET=35
    STRING_CLOSE_BRACKET=36
    STRING_INTEGER_LITERAL=37
    STRING_ASSIGNMENT=38
    STRING_HASH=39
    STRING_WHITESPACES=40
    STRING_NEWLINE=41
    STRING_VALUE=42
    STRIN_ASSIGNMENT_NEWLINE=43
    COMMENT=44
    COMMENT_NEWLINE=45

    def __init__(self, input, output=sys.stdout):
        super(RosMessageParser, self).__init__(input, output=output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Ros_file_inputContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Ros_file_inputContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ros_message_input(self):
            return self.getTypedRuleContext(RosMessageParser.Ros_message_inputContext,0)


        def ros_action_input(self):
            return self.getTypedRuleContext(RosMessageParser.Ros_action_inputContext,0)


        def ros_service_input(self):
            return self.getTypedRuleContext(RosMessageParser.Ros_service_inputContext,0)


        def getRuleIndex(self):
            return RosMessageParser.RULE_ros_file_input

        def enterRule(self, listener):
            if hasattr(listener, "enterRos_file_input"):
                listener.enterRos_file_input(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRos_file_input"):
                listener.exitRos_file_input(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRos_file_input"):
                return visitor.visitRos_file_input(self)
            else:
                return visitor.visitChildren(self)




    def ros_file_input(self):

        localctx = RosMessageParser.Ros_file_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ros_file_input)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.ros_message_input()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.ros_action_input()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.ros_service_input()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ros_message_inputContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Ros_message_inputContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ros_message(self):
            return self.getTypedRuleContext(RosMessageParser.Ros_messageContext,0)


        def EOF(self):
            return self.getToken(RosMessageParser.EOF, 0)

        def getRuleIndex(self):
            return RosMessageParser.RULE_ros_message_input

        def enterRule(self, listener):
            if hasattr(listener, "enterRos_message_input"):
                listener.enterRos_message_input(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRos_message_input"):
                listener.exitRos_message_input(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRos_message_input"):
                return visitor.visitRos_message_input(self)
            else:
                return visitor.visitChildren(self)




    def ros_message_input(self):

        localctx = RosMessageParser.Ros_message_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ros_message_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.ros_message()
            self.state = 58
            self.match(RosMessageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ros_action_inputContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Ros_action_inputContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ros_message(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RosMessageParser.Ros_messageContext)
            else:
                return self.getTypedRuleContext(RosMessageParser.Ros_messageContext,i)


        def MESSAGE_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(RosMessageParser.MESSAGE_SEPARATOR)
            else:
                return self.getToken(RosMessageParser.MESSAGE_SEPARATOR, i)

        def EOF(self):
            return self.getToken(RosMessageParser.EOF, 0)

        def getRuleIndex(self):
            return RosMessageParser.RULE_ros_action_input

        def enterRule(self, listener):
            if hasattr(listener, "enterRos_action_input"):
                listener.enterRos_action_input(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRos_action_input"):
                listener.exitRos_action_input(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRos_action_input"):
                return visitor.visitRos_action_input(self)
            else:
                return visitor.visitChildren(self)




    def ros_action_input(self):

        localctx = RosMessageParser.Ros_action_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ros_action_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.ros_message()
            self.state = 61
            self.match(RosMessageParser.MESSAGE_SEPARATOR)
            self.state = 62
            self.ros_message()
            self.state = 63
            self.match(RosMessageParser.MESSAGE_SEPARATOR)
            self.state = 64
            self.ros_message()
            self.state = 65
            self.match(RosMessageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ros_service_inputContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Ros_service_inputContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ros_message(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RosMessageParser.Ros_messageContext)
            else:
                return self.getTypedRuleContext(RosMessageParser.Ros_messageContext,i)


        def MESSAGE_SEPARATOR(self):
            return self.getToken(RosMessageParser.MESSAGE_SEPARATOR, 0)

        def EOF(self):
            return self.getToken(RosMessageParser.EOF, 0)

        def getRuleIndex(self):
            return RosMessageParser.RULE_ros_service_input

        def enterRule(self, listener):
            if hasattr(listener, "enterRos_service_input"):
                listener.enterRos_service_input(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRos_service_input"):
                listener.exitRos_service_input(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRos_service_input"):
                return visitor.visitRos_service_input(self)
            else:
                return visitor.visitChildren(self)




    def ros_service_input(self):

        localctx = RosMessageParser.Ros_service_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ros_service_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.ros_message()
            self.state = 68
            self.match(RosMessageParser.MESSAGE_SEPARATOR)
            self.state = 69
            self.ros_message()
            self.state = 70
            self.match(RosMessageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rosbag_inputContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Rosbag_inputContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ros_message(self):
            return self.getTypedRuleContext(RosMessageParser.Ros_messageContext,0)


        def EOF(self):
            return self.getToken(RosMessageParser.EOF, 0)

        def rosbag_nested_message(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RosMessageParser.Rosbag_nested_messageContext)
            else:
                return self.getTypedRuleContext(RosMessageParser.Rosbag_nested_messageContext,i)


        def getRuleIndex(self):
            return RosMessageParser.RULE_rosbag_input

        def enterRule(self, listener):
            if hasattr(listener, "enterRosbag_input"):
                listener.enterRosbag_input(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRosbag_input"):
                listener.exitRosbag_input(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRosbag_input"):
                return visitor.visitRosbag_input(self)
            else:
                return visitor.visitChildren(self)




    def rosbag_input(self):

        localctx = RosMessageParser.Rosbag_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rosbag_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.ros_message()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RosMessageParser.ROSBAG_MESSAGE_SEPARATOR:
                self.state = 73
                self.rosbag_nested_message()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(RosMessageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rosbag_nested_messageContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Rosbag_nested_messageContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ROSBAG_MESSAGE_SEPARATOR(self):
            return self.getToken(RosMessageParser.ROSBAG_MESSAGE_SEPARATOR, 0)

        def ros_type(self):
            return self.getTypedRuleContext(RosMessageParser.Ros_typeContext,0)


        def ros_message(self):
            return self.getTypedRuleContext(RosMessageParser.Ros_messageContext,0)


        def getRuleIndex(self):
            return RosMessageParser.RULE_rosbag_nested_message

        def enterRule(self, listener):
            if hasattr(listener, "enterRosbag_nested_message"):
                listener.enterRosbag_nested_message(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRosbag_nested_message"):
                listener.exitRosbag_nested_message(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRosbag_nested_message"):
                return visitor.visitRosbag_nested_message(self)
            else:
                return visitor.visitChildren(self)




    def rosbag_nested_message(self):

        localctx = RosMessageParser.Rosbag_nested_messageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rosbag_nested_message)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(RosMessageParser.ROSBAG_MESSAGE_SEPARATOR)
            self.state = 82
            self.ros_type()
            self.state = 83
            self.ros_message()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ros_messageContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Ros_messageContext, self).__init__(parent, invokingState)
            self.parser = parser

        def field_declaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RosMessageParser.Field_declarationContext)
            else:
                return self.getTypedRuleContext(RosMessageParser.Field_declarationContext,i)


        def constant_declaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RosMessageParser.Constant_declarationContext)
            else:
                return self.getTypedRuleContext(RosMessageParser.Constant_declarationContext,i)


        def comment(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RosMessageParser.CommentContext)
            else:
                return self.getTypedRuleContext(RosMessageParser.CommentContext,i)


        def getRuleIndex(self):
            return RosMessageParser.RULE_ros_message

        def enterRule(self, listener):
            if hasattr(listener, "enterRos_message"):
                listener.enterRos_message(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRos_message"):
                listener.exitRos_message(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRos_message"):
                return visitor.visitRos_message(self)
            else:
                return visitor.visitChildren(self)




    def ros_message(self):

        localctx = RosMessageParser.Ros_messageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ros_message)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RosMessageParser.BOOL) | (1 << RosMessageParser.INT8) | (1 << RosMessageParser.UINT8) | (1 << RosMessageParser.BYTE) | (1 << RosMessageParser.CHAR) | (1 << RosMessageParser.INT16) | (1 << RosMessageParser.UINT16) | (1 << RosMessageParser.INT32) | (1 << RosMessageParser.UINT32) | (1 << RosMessageParser.INT64) | (1 << RosMessageParser.UINT64) | (1 << RosMessageParser.FLOAT32) | (1 << RosMessageParser.FLOAT64) | (1 << RosMessageParser.STRING) | (1 << RosMessageParser.TIME) | (1 << RosMessageParser.DURATION) | (1 << RosMessageParser.HASH) | (1 << RosMessageParser.IDENTIFIER) | (1 << RosMessageParser.STRING_HASH))) != 0):
                self.state = 88
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 85
                    self.field_declaration()
                    pass

                elif la_ == 2:
                    self.state = 86
                    self.constant_declaration()
                    pass

                elif la_ == 3:
                    self.state = 87
                    self.comment()
                    pass


                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Field_declarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(RosMessageParser.IdentifierContext,0)


        def dtype(self):
            return self.getTypedRuleContext(RosMessageParser.DtypeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(RosMessageParser.Array_typeContext,0)


        def getRuleIndex(self):
            return RosMessageParser.RULE_field_declaration

        def enterRule(self, listener):
            if hasattr(listener, "enterField_declaration"):
                listener.enterField_declaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitField_declaration"):
                listener.exitField_declaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitField_declaration"):
                return visitor.visitField_declaration(self)
            else:
                return visitor.visitChildren(self)




    def field_declaration(self):

        localctx = RosMessageParser.Field_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_field_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 93
                self.dtype()
                pass

            elif la_ == 2:
                self.state = 94
                self.array_type()
                pass


            self.state = 97
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constant_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.Constant_declarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def integral_type(self):
            return self.getTypedRuleContext(RosMessageParser.Integral_typeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(RosMessageParser.IdentifierContext,0)


        def ASSIGNMENT(self):
            return self.getToken(RosMessageParser.ASSIGNMENT, 0)

        def integral_value(self):
            return self.getTypedRuleContext(RosMessageParser.Integral_valueContext,0)


        def floating_point_type(self):
            return self.getTypedRuleContext(RosMessageParser.Floating_point_typeContext,0)


        def floating_point_value(self):
            return self.getTypedRuleContext(RosMessageParser.Floating_point_valueContext,0)


        def boolean_type(self):
            return self.getTypedRuleContext(RosMessageParser.Boolean_typeContext,0)


        def bool_value(self):
            return self.getTypedRuleContext(RosMessageParser.Bool_valueContext,0)


        def string_type(self):
            return self.getTypedRuleContext(RosMessageParser.String_typeContext,0)


        def STRING_ASSIGNMENT(self):
            return self.getToken(RosMessageParser.STRING_ASSIGNMENT, 0)

        def string_value(self):
            return self.getTypedRuleContext(RosMessageParser.String_valueContext,0)


        def getRuleIndex(self):
            return RosMessageParser.RULE_constant_declaration

        def enterRule(self, listener):
            if hasattr(listener, "enterConstant_declaration"):
                listener.enterConstant_declaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConstant_declaration"):
                listener.exitConstant_declaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitConstant_declaration"):
                return visitor.visitConstant_declaration(self)
            else:
                return visitor.visitChildren(self)




    def constant_declaration(self):

        localctx = RosMessageParser.Constant_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constant_declaration)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RosMessageParser.INT8, RosMessageParser.UINT8, RosMessageParser.BYTE, RosMessageParser.CHAR, RosMessageParser.INT16, RosMessageParser.UINT16, RosMessageParser.INT32, RosMessageParser.UINT32, RosMessageParser.INT64, RosMessageParser.UINT64]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.integral_type()
                self.state = 100
                self.identifier()
                self.state = 101
                self.match(RosMessageParser.ASSIGNMENT)
                self.state = 102
                self.integral_value()
                pass
            elif token in [RosMessageParser.FLOAT32, RosMessageParser.FLOAT64]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.floating_point_type()
                self.state = 105
                self.identifier()
                self.state = 106
                self.match(RosMessageParser.ASSIGNMENT)
                self.state = 109
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 107
                    self.integral_value()
                    pass

                elif la_ == 2:
                    self.state = 108
                    self.floating_point_value()
                    pass


                pass
            elif token in [RosMessageParser.BOOL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.boolean_type()
                self.state = 112
                self.identifier()
                self.state = 113
                self.match(RosMessageParser.ASSIGNMENT)
                self.state = 116
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [RosMessageParser.TRUE, RosMessageParser.FALSE]:
                    self.state = 114
                    self.bool_value()
                    pass
                elif token in [RosMessageParser.PLUS, RosMessageParser.MINUS, RosMessageParser.INTEGER_LITERAL]:
                    self.state = 115
                    self.integral_value()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [RosMessageParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.string_type()
                self.state = 119
                self.identifier()
                self.state = 120
                self.match(RosMessageParser.STRING_ASSIGNMENT)
                self.state = 121
                self.string_value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.CommentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(RosMessageParser.COMMENT, 0)

        def HASH(self):
            return self.getToken(RosMessageParser.HASH, 0)

        def STRING_HASH(self):
            return self.getToken(RosMessageParser.STRING_HASH, 0)

        def getRuleIndex(self):
            return RosMessageParser.RULE_comment

        def enterRule(self, listener):
            if hasattr(listener, "enterComment"):
                listener.enterComment(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComment"):
                listener.exitComment(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitComment"):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = RosMessageParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                _la = self._input.LA(1)
                if not(_la==RosMessageParser.HASH or _la==RosMessageParser.STRING_HASH):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 126
                self.match(RosMessageParser.COMMENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                _la = self._input.LA(1)
                if not(_la==RosMessageParser.HASH or _la==RosMessageParser.STRING_HASH):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RosMessageParser.IdentifierContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(RosMessageParser.IDENTIFIER, 0)

        def STRING_IDENTIFIER(self):
            return self.getToken(RosMessageParser.STRING_IDENTIFIER, 0)

        def INT8(self):
            return self.getToken(RosMessageParser.INT8, 0)

        def UINT8(self):
            return self.getToken(RosMessageParser.UINT8, 0)

        def INT16(self):
            return self.getToken(RosMessageParser.INT16, 0)

        def UINT16(self):
            return self.getToken(RosMessageParser.UINT16, 0)

        def INT32(self):
            return self.getToken(RosMessageParser.INT32, 0)

        def UINT32(self):
            return self.getToken(RosMessageParser.UINT32, 0)

        def INT64(self):
            return self.getToken(RosMessageParser.INT64, 0)

        def UINT64(self):
            return self.getToken(RosMessageParser.UINT64, 0)

        def BYTE(self):
            return self.getToken(RosMessageParser.BYTE, 0)

        def CHAR(self):
            return self.getToken(RosMessageParser.CHAR, 0)

        def FLOAT32(self):
            return self.getToken(RosMessageParser.FLOAT32, 0)

        def FLOAT64(self):
            return self.getToken(RosMessageParser.FLOAT64, 0)

        def TIME(self):
            return self.getToken(RosMessageParser.TIME, 0)

        def DURATION(self):
            return self.getToken(RosMessageParser.DURATION, 0)

        def STRING(self):
            return self.getToken(RosMessageParser.STRING, 0)

        def BOOL(self):
            return self.getToken(RosMessageParser.BOOL, 0)

        def TRUE(self):
            return self.getToken(RosMessageParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(RosMessageParser.FALSE, 0)

        def getRuleIndex(self):
            return RosMessageParser.RULE_identifier

        def enterRule(self, listener):
            if hasattr(listener, "enterIdentifier"):
                listener.enterIdentifier(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIdentifier"):
                listener.exitIdentifier(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitIdentifier"):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = RosMessageParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_identifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RosMessageParser.BOOL) | (1 << RosMessageParser.INT8) | (1 << RosMessageParser.UINT8) | (1 << RosMessageParser.BYTE) | (1 << RosMessageParser.CHAR) | (1 << RosMessageParser.INT16) | (1 << RosMessageParser.UINT16) | (1 << RosMessageParser.INT32) | (1 << RosMessageParser.UINT32) | (1 << RosMessageParser.INT64) | (1 << RosMessageParser.UINT64) | (1 << RosMessageParser.FLOAT32) | (1 << RosMessageParser.FLOAT64) | (1 << RosMessageParser.STRING) | (1 << RosMessageParser.TIME) | (1 << RosMessageParser.DURATION) | (1 << RosMessageParser.TRUE) | (1 << RosMessageParser.FALSE) | (1 << RosMessageParser.IDENTIFIER) | (1 << RosMessageParser.STRING_IDENTIFIER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

